--- a/expedia-frontend-clone/package.json
+++ b/expedia-frontend-clone/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expedia-frontend-clone",
+  "name": "expedia-clone-Website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
